AJOUTE l'envoi d'email via MAILER de Symfony

--- a/templates/_template.html.twig
+++ b/templates/_template.html.twig
@@ -114,7 +114,7 @@
                     <div class="tile is-child box">
                         <nav class="level has-text-weight-bold">
                             <p class="level-item has-text-centered">
-                                <a class="link is-info">Nous contacter</a>
+                                <a href="{{ path('nous_contacter') }}" class="link is-info">Nous contacter</a>
                             </p>
                             <p class="level-item has-text-centered">
                                 <a href="{{ path('mentions_legales') }}" class="link is-info">Mentions légales</a>
