--- a/templates/admin_article/liste.html.twig
+++ b/templates/admin_article/liste.html.twig
@@ -9,7 +9,7 @@
 
         <div class="columns">
             <div class="column"></div>
-            <div class="column is-half">
+            <div class="column is-three-quarters">
                 <a href="{{ path('admin_article_add') }}" class="button is-success mb-4">
                     Nouveau Article
                 </a>
@@ -19,7 +19,7 @@
                 <table class="table is-fullwidth has-text-centered">
                     <thead>
                     <tr>
-                        <th class="px-1">#</th>
+                        <th>#</th>
                         <th>Titre de l'article</th>
                         <th>Auteur</th>
                         <th>Créé le</th>
@@ -30,11 +30,11 @@
                     {# La boucle sur list_articles, dernière colonne : Modifier & Supprimer #}
                     {% for article in list_articles %}
                         <tr>
-                            <td>{{ article.id }}</td>
-                            <td class="has-text-left">{{ article.titre }}</td>
-                            <td>{{ article.auteur.prenom ~ ' ' ~ article.auteur.nom |upper }}</td>
-                            <td>{{ article.creation | date('d/m/yy') }}</td>
-                            <td>
+                            <td class="px-1">{{ article.id }}</td>
+                            <td class="px-1 has-text-left">{{ article.titre }}</td>
+                            <td class="px-1">{{ article.auteur.prenom ~ ' ' ~ article.auteur.nom |upper }}</td>
+                            <td class="px-1">{{ article.creation | date('d/m/yy') }}</td>
+                            <td class="px-1">
                                 <div class="buttons is-pulled-right">
                                     <a href="{{ path('admin_article_edit', {id:article.id}) }}" class="button is-success">Modifier</a>
                                     <a href="{{ path('admin_article_delete', {id:article.id}) }}" class="button is-danger">Supprimer</a>
@@ -42,7 +42,6 @@
                             </td>
                         </tr>
                     {% endfor %}
-
                     </tbody>
                 </table>
             </div>
