--- a/templates/includes/produit_list.html.twig
+++ b/templates/includes/produit_list.html.twig
@@ -10,12 +10,22 @@
 {#                            <img src="https://loremflickr.com/256/256/clothes/all?lock={{produit.id}}" alt="Image">#}
 {#                        </figure>#}
                         {% if produit.imageFilename %}
-                            <figure>
+                            <figure class="is-relative">
                                 <img width="200" src="{{ asset('uploads/images/' ~ produit.imageFilename) }}" alt="Image representative du produit">
+                                {% if produit.label == 1 %}
+                                    <div>
+                                        <img style="position: absolute; top: -30px ; right: -30px" width="80" src="{{ asset('uploads/images_site/assum_small_label.png') }}" alt="Image representative du produit">
+                                    </div>
+                                {% endif %}
                             </figure>
                         {% else %}
-                            <figure>
+                            <figure class="is-relative">
                                 <img width="200" src="https://loremflickr.com/200/120?lock={{ produit.id }}" alt="Image">
+                                {% if produit.label == 1 %}
+                                <div>
+                                    <img style="position: absolute; top: -30px ; right: -30px" width="80" src="{{ asset('uploads/images_site/assum_small_label.png') }}" alt="Image representative du produit">
+                                </div>
+                                {% endif %}
                             </figure>
                         {% endif %}
                     </div>
