RAJOUTE Pattern mdp, token(activation compte et reset mdp)

--- a/templates/contact/notification.html.twig
+++ b/templates/contact/notification.html.twig
@@ -4,7 +4,7 @@
     <container class="header">
         <row>
             <columns>
-                <h1 class="text-center">Ça marche !</h1>
+                <h1 class="text-center">Notification</h1>
 
                 <center>
                     <menu class="text-center">
@@ -28,17 +28,9 @@
                 </center>
                 <spacer size="16"></spacer>
 
-                <h4>Le message suivant a été envoyé avec une application de démonstration de Symfony Mailer:</h4>
+                <h4>Le message suivant a été envoyé depuis le site ASSUM :</h4>
                 <p>{{ message }}</p>
 
-                <center>
-                    <menu>
-                        <item href="https://aymdev.io/">Aymeric Mayeux</item>
-                        <item href="https://github.com/AymDev">GitHub</item>
-                        <item href="https://stackoverflow.com/users/6349751/aymdev">StackOverflow</item>
-                        <item href="https://hub.docker.com/u/aymdev">Docker Hub</item>
-                    </menu>
-                </center>
             </columns>
         </row>
         <spacer size="16"></spacer>
