--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -48,6 +48,12 @@
                 <button class="button is-primary is-fullwidth" type="submit">
                     Connexion
                 </button>
+                <p class="help is-info">
+                    <span class="icon"><i class="fas fa-question-circle"></i></span>
+                    <span>
+                        <a href="{{ path('app_forgotten_password') }}">Mot de passe perdu ?</a>
+                    </span>
+                </p>
             </form>
         </div>
     </div>
