--- a/templates/contact/reset_password.html.twig
+++ b/templates/contact/reset_password.html.twig
@@ -13,10 +13,14 @@
         <row>
             <columns>
                 <spacer size="8"></spacer>
-                <h4>Bonjour</h4>
-                <p>Une demande de réinitialisation du mot de passe a été demandée pour le site Assum. <br>
+                <h4>Bonjour,</h4>
+                <p>Vous avez demandé la réinitialisation du mot de passe pour le site Assum. <br>
                     Veuillez cliquer sur le lien ci-dessous pour le réinitialiser.</p>
                 <p><a href="{{ url }}">Réinitialiser mon mot de passe</a></p>
+                <p>
+                    Cordialement, <br>
+                    L'équipe <a href="{{ absolute_url(path('home')) }}">Assum</a>
+                </p>
             </columns>
         </row>
         <spacer size="8"></spacer>
