--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -14,6 +14,11 @@ $footer-padding           : 3rem 1.5rem 3rem ;
   font-size: 0.9em;
 }
 
+// can be used anywhere in site
+.has-text-underlined {
+  text-decoration-line: underline;
+}
+
 // Section Articles, pour mettre imposer une largeur à la colonne de commentaires
 .fixed_width_commentaire {
   width: 40vw;
@@ -104,5 +109,14 @@ $footer-padding           : 3rem 1.5rem 3rem ;
   }
 }
 
+// REGISTER PAGE
 
+// CHECKBOX
+.is-flex-checkbox .control {
+  display: flex;
+  align-items: center;
+  input {
+    margin-right: 10px;
+  }
+}
 
